update on array

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <ol class="my-list">
  
     </ol>
-    <script src="/js/main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
