--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Directory</title>
 </head>
 <body>
-    <p>Directory of all notes, exercises, challenges</p>
+    <h1>Directory of all notes, exercises, challenges</h1>
 
-    <ol class="my-list">
+    <ol id="my-list">
  
     </ol>
     <script src="js/main.js"></script>
