--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Directory</title>
 </head>
 <body>
-    <h1>Directory of all notes, exercises, challenges</h1>
+    <h1 style="color:blue;">Directory of all notes, exercises, challenges</h1>
 
     <ol id="my-list">
  
