--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Directory</title>
 </head>
-<body>
-    <h1 style="color:blue;">Directory of all notes, exercises, challenges</h1>
+<body style="color:white; background-color: black;">
+    <h1>Directory of all notes, exercises, challenges</h1>
 
     <ol id="my-list">
      
