back to white background

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Directory</title>
 </head>
-<body style="color:white; background-color: black;">
+<body style="color:rgb(48, 48, 48);">
     <h1>Directory of all notes, exercises, challenges</h1>
 
     <ol id="my-list">
