week 1 notes and files

--- a/week1/index.html
+++ b/week1/index.html
@@ -7,7 +7,37 @@
     <title>Week 1 Notes</title>
 </head>
 <body>
-    <h3>These are my week 1 notes</h3>
-    <p>this is mainly just a test</p>
+    <h1>Week 1 Notes and Observations</h1>
+    <ul> 
+        <li> I've taken a database class but never really learned
+            how to apply it in an application. 
+        </li>
+        <li>
+            If I'm being honest this example seems very easy so far. This would have been a very nice
+            resource when I was starting out though. It took a lot of googling to learn and this has 
+            a very simple explanation. 
+        </li>
+        <li>I still enjoy the coding and practice. I feel like it will help me get much more fluent 
+            and I'd like to keep doing practice like this. 
+        </li>
+        <li>I do need to remember the difference between .value and .innerHTML. <br>
+        .value is used for input and text areas. <br>
+        .innerHTML is used for sections and other tags
+        </li>
+        <li>the localStorage part of the JS is also brand new to me. I believe I used it for 
+            an app many semesters ago.
+        </li>
+        <li>
+            Here is a <a href="story_editor.html">link</a> to my story editor page. 
+        </li>
+        <li>Here is a <a href="even_or_odd.html">link</a> to even or odd exercise.</li>
+    </ul>
+
+ 
+
+    <h2>Week 1 questions</h2>
+    <ol>
+        <li></li>
+    </ol>
 </body>
 </html>
