--- a/week1/index.html
+++ b/week1/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Week 1 Notes and Observations</h1>
+    <h3>Doing stuff with web things</h3>
     <ul> 
         <li> I've taken a database class but never really learned
             how to apply it in an application. 
@@ -32,12 +33,77 @@
         </li>
         <li>Here is a <a href="even_or_odd.html">link</a> to even or odd exercise.</li>
     </ul>
+    <h3>Master Mobile UX</h3>
+    <ul>
+        <li>Mobile tracking has skyrocketed</li>
+        <li>"Whatever you are doing, do mobile first"</li>
+        <li>Just because a website is responsive, doesn't mean it is "mobile first"</li>
+        <ul>Mobile first
+            <li>time consuming</li>
+            <li>provides best experience</li>
+            <li>plans for the future and read for growth</li>
+        </ul>
+        <li>desktop computer sales continually sink. Laptops have taken over computers</li>
+        <li>Start small and scale up. Concentrate on content and functionality</li>
+        <h3>Understand users</h3>
+        <ul>
+            <li>Focus groups don't always work. People don't know what they want until they have it</li>
+            <li>Be there. Help them</li>
+            <li>Be useful. People should not need to hunt through the website. Provide what they came for</li>
+            <li>Be quick. Attention span is short. user shouldn't notice</li>
+            <li>make it easy for users to reach things while using their phones. Many people use a one handed grip
+                this pretty much means don't put common buttons on the top.</li>
+            <li>If things load quickly, people are a lot more likely to stay</li>
+            <li>Biggest contributor to speed is networks</li>
+           <h4>Speed</h4>
+            <ul>
+                <li>Reduce image usage</li>
+                <li>lower bandwidth</li>
+               <li> optimize and minify css and js files. Including eliminating whitespace. </li> 
+            </ul>
+
+        </ul>
+        <h3>Primary controls</h3>
+        <ul>
+            <li>Put controls on the bottom of the screen where it is easy for thumbs to reach</li>
+            <li>Example of this is instagram (not facebook)</li>
+            <li>Having a "menu" wrapped in border and not a hamburger button is much easier for users</li>
+            <li>Users won't often complain, they will just leave the sit</li>
+        </ul>
+        <h3>Mobile Inputs</h3>
+        <ul>
+            <li>Make forms easier. Ditch labels and put text inside the input field</li>
+            <li>make input box larger so it is easier to hit with a thumb.</li>
+            <li>make checkboxes larger as well</li>
+            <li>Eliminate the necessity of long forms</li>
+            <li>if a long form is necessary. Then divide the form up into different sections</li>
+            <li>If form is long, enable "autocomplete" on the form. </li>
+            <li>Another type of input is "passwords"</li>
+            <li>one way is to show the password by default, keep option to hide but most people aren't being snooped on</li>
+            <li>Space credit card information correctly. </li>
+            <li>give users the best keyboard for inputs. If you are asking for a phone number, only bring up the number pad instead of the
+                regular keyboard
+            </li>
+            <li>link phone numbers instead of making them copy and paste the numbers</li>
+        </ul>
+        <h3>Mobile Advertising</h3>
+        <ul>
+            <li>Ad spending went from 25billion to 150billion in a 5 year period ending in 2017</li>
+            <li>Never do a pop up add. One of the most detested things on the web</li>
+            <li>Ads should be small and simple. Should not take up 40% of the mobile screen</li>
+            <li>A larger add could be revealed once clicked. But keep add small. </li>
+            <li>could have an add behind the page with a little window that shows the background when scrolled</li>
+            <li>Users don't visit your website to look at ads. Give them what they came for and then you can advertise to them</li>
+        </ul>
+    </ul>
 
  
 
     <h2>Week 1 questions</h2>
     <ol>
-        <li></li>
+        <li>Why do many companies still prioritize ads over content? Do they not care about the user? There are many websites that I know just show me ads
+            and because of that I never click on them for content. isn't that counterintuitive? 
+        </li>
     </ol>
 </body>
 </html>
