--- a/week1/index.html
+++ b/week1/index.html
@@ -28,10 +28,12 @@
         <li>the localStorage part of the JS is also brand new to me. I believe I used it for 
             an app many semesters ago.
         </li>
+        <li>JSON stringify and parse should be looked into more. I haven't used those in a while and I don't know what they do.</li>
         <li>
             Here is a <a href="story_editor.html">link</a> to my story editor page. 
         </li>
         <li>Here is a <a href="even_or_odd.html">link</a> to even or odd exercise.</li>
+        <li>Here is a <a href="note_it.html">link</a> to journal exercise.</li>
     </ul>
     <h3>Master Mobile UX</h3>
     <ul>
