start week2 readings

--- a/week1/index.html
+++ b/week1/index.html
@@ -30,10 +30,12 @@
         </li>
         <li>JSON stringify and parse should be looked into more. I haven't used those in a while and I don't know what they do.</li>
         <li>
-            Here is a <a href="story_editor.html">link</a> to my story editor page. 
+            <ul>
+                <li>Here is a <a href="story_editor.html">link</a> to my story editor page.</li>
+                <li>Here is a <a href="even_or_odd.html">link</a> to even or odd exercise.</li>
+                <li>Here is a <a href="note_it.html">link</a> to journal exercise.</li>
+            </ul>
         </li>
-        <li>Here is a <a href="even_or_odd.html">link</a> to even or odd exercise.</li>
-        <li>Here is a <a href="note_it.html">link</a> to journal exercise.</li>
     </ul>
     <h3>Master Mobile UX</h3>
     <ul>
