update week2 notes

--- a/week2/index.html
+++ b/week2/index.html
@@ -31,9 +31,24 @@
 
     <h3>Chapter 3: Arrays, Logic, Loops</h3>
     <ul>
-        
+        <li>There are a lot of ways to modify arrays. I'm not sure how to find an exact match to a value in an array and then manipulate it. </li>
+        <li>I've never heard of "Set" before</li>
+        <li>A lot of this feels like review. </li>
+        <li>I'm still not sure I understand the difference between "==" and "===". </li>
+        <li>Although I've never used a ternary statment, Ive seen it used many times. It seems much simpler.</li>
+
     </ul>
 
+    <h3>Chapter 4: Functions</h3>
+    <ul>
+        <li>I'm expecting most of this to be review. </li>
+        <li>My biggest confusion has always been a function constructors. I understand what they do but I don't understand when to use them. Half the time
+            they say use them half the time they don't. </li>
+        <li>I've just started using arrow functions. I understand that they work but not when I should use it over a normal function. It seems like they are 
+            highly prefered now. 
+        </li>
+        <li> Most of the rest of functions I recognized</li>
+    </ul>
 
     <h3>Questions</h3>
     <ul>
@@ -42,6 +57,10 @@
             of c but not change c itself?<br>
             It looks like i has to do with primitive and non-primitive. Maybe I'm not use to it from other languages. 
         </li>
+        <li>How can I find a value in an array. Ex: the book talks about super heroes in an array. What if I was looking for "Thor" but didn't know the position. 
+            how can i find the index that contains "Thor" and then delete just that inde?
+        </li>
+        <li>Set almost looks more friendly than array. Why do we not use set more often? </li>
     </ul>
     
 </body>
