team activity02 finished

--- a/week2/index.html
+++ b/week2/index.html
@@ -62,6 +62,9 @@
         </li>
         <li>Set almost looks more friendly than array. Why do we not use set more often? </li>
     </ul>
+
+    <h3>Team Activity</h3>
+    <li>Here is a <a href="ta02.html">link</a> to the team activity</li>
     
 </body>
 </html>
