--- a/week2/ta02.html
+++ b/week2/ta02.html
@@ -41,7 +41,7 @@
     </script>
 </head>
 <body>
-    
+    <h3>Sum Previous Numbers</h3>
         <input type="number" name="textSent" id="textSent">
         <button onclick="addNum()">Submit</button>
 
@@ -49,7 +49,7 @@
 <br>
 <br>
 
-<h3>Adding Machine</h3>
+<h3>Calculator</h3>
         <input type="number" name="addMachine1" id="num1">
         <input type="number" name="addMachine2" id="num2">
         <button onclick="(performOperation(add))">Add</button>
