--- a/week4/index.html
+++ b/week4/index.html
@@ -59,8 +59,33 @@
     </ul>
 
     <h3>Chapter 15: Modern javascript</h3>
-    <li>jQuery is the most popular JS library. </li>
-
+    <ul>
+        <li>jQuery is the most popular JS library. </li>
+        <li>I understand how to install new packages and libraries as I have had to do it a number of times</li>
+        <li>However, there are a million command lines that I can't ever remember and a lot of useful ones are listed
+            here on this page. 
+        </li>
+        <li>I'm still not sure I understand the difference between plain npm install, npm install --save, npm 
+            install --save--dev, and npm install --global. I am going to dive into that a little. 
+        </li>
+        <li>It looks like the --save just makes sure that the package.json is updated and saved. </li>
+        <li>--dev means that the package isn't needed to build the actual prodcut. It is only needed for dev. Therefore, 
+            when the actual product is released the --dev pacakges will not be released with it.
+        </li>
+        <li>--global means that it will install the package globally on the system and not just for the project. The problem 
+            I have with this is that the couple packages I have install globally end up not working in the project folder.
+        </li>
+        <li>There are a number of optimization features that I will need to go over when I am ready to deploy somethings. </li>
+        <li>During minification, do you remove white space at the end of lines? or just full line gaps</li>
+        <li>Also when changing my functions to one letter, is there a program that will change them to one letter and then unchange
+            them all and revert them back if there ends up being an error or needed modification? Working with one letter functions
+            sounds like a nightmare. 
+        </li>
+        <li>The more I read the more I realize that deploying something is very complicated. There are so many little things that need
+            to be taken into account for. Will I always need a Webpack or does it just help? 
+        </li>
+        
+    </ul>
 
 
 <a href="ta04.html">Link to team activity</a>
