team activity update

--- a/week5/index.html
+++ b/week5/index.html
@@ -7,7 +7,8 @@
     <title>Week 05</title>
 </head>
 <body>
-    <a href="/week5/team/team.html">Team Activity</a>
+    <a href="/team/team.html">Team Activity</a>
+    <p>I'm not sure why the team activity link isn't working. That is the exact path to the team activity..</p>
     <h3>Chapter 10: Testing and Debugging</h3>
     <ul>
         <li>I have never been good at testing and debugging. The only "debugging" i have done is when I get an error I look at the line and can walk through the code 
