push todo project

--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <title>Directory</title>
 </head>
 <body style="color:rgb(48, 48, 48);">
+    <h2>ToDo List <a href="todo/index.html">Here</a></h2>
     <h1>Directory of all notes, exercises, challenges</h1>
-
     <ol id="my-list">
      
     </ol>
+
     <script src="js/main.js"></script>
 </body>
 </html>
