pushing final ideas

--- a/index.html
+++ b/index.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Directory</title>
-</head>
-<body style="color:rgb(48, 48, 48);">
+  </head>
+  <body style="color: rgb(48, 48, 48)">
     <h2>ToDo List <a href="todo/index.html">Here</a></h2>
     <h1>Directory of all notes, exercises, challenges</h1>
-    <ol id="my-list">
-     
-    </ol>
+    <ol id="my-list"></ol>
+
+    <h3>Final Ideas</h3>
+    <ul>
+      <li>Something to do with stocks</li>
+      <li>A joke hotline</li>
+      <li>Basic travel information for a city</li>
+      <li>Sports stats and highlights</li>
+    </ul>
 
     <script src="js/main.js"></script>
-</body>
+  </body>
 </html>
