--- a/week8/index.html
+++ b/week8/index.html
@@ -54,7 +54,7 @@
         opacity: 1; } }
       </li>
     </ul>
-    <h1>Chapter 12: cANVAS, svg, and Drag and Drop</h1>
+    <h1>Chapter 12: Canvas, svg, and Drag and Drop</h1>
     <ul>
       <li>
         Canvas- draw anything we imagine all through JavaScript. Avoids the need
@@ -74,7 +74,7 @@
         SVG- Scalable Vector Graphics. Vector images preserve their quality even
         as you blow them up or shrink them down
       </li>
-      <li>Drap and Drop- Specify certain items that are dragable</li>
+      <li>Drag and Drop- Specify certain items that are dragable</li>
       <li></li>
     </ul>
   </body>
