--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Directory</title>
   </head>
   <body style="color: rgb(48, 48, 48)">
+    <h1>Final Project</h1>
+    <p><a href="StockAPI/index.html">Here</a></p>
     <h2>ToDo List <a href="todo/index.html">Here</a></h2>
     <h1>Directory of all notes, exercises, challenges</h1>
     <ol id="my-list"></ol>
